--- a/monitor-server/src/main/resources/application.yml
+++ b/monitor-server/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 123scc
-    url: jdbc:mysql://dock01:3306/test
+    url: jdbc:mysql://dock01:3306/monitor
   data:
     redis:
       database: 0
