前后端交互信息，web显示后端数据

--- a/monitor-server/pom.xml
+++ b/monitor-server/pom.xml
@@ -87,6 +87,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
+        <!-- influxdb客户端配置 -->
+        <dependency>
+            <groupId>com.influxdb</groupId>
+            <artifactId>influxdb-client-java</artifactId>
+            <version>6.6.0</version>
+        </dependency>
     </dependencies>
 
     <build>
