--- a/monitor-client/pom.xml
+++ b/monitor-client/pom.xml
@@ -37,10 +37,16 @@
             <artifactId>fastjson2</artifactId>
             <version>2.0.34</version>
         </dependency>
+        <!--    读取主机信息框架oshi    -->
         <dependency>
             <groupId>com.github.oshi</groupId>
             <artifactId>oshi-core</artifactId>
             <version>6.4.0</version>
+        </dependency>
+        <!--    定时任务框架quartz    -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
         </dependency>
     </dependencies>
 
