对页面详情完善

--- a/monitor-server/src/main/resources/application.yml
+++ b/monitor-server/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   influx:
     url: http://192.168.171.199:8086
-    user: shucongcong
+    user: admin
     password: 12345678
   security:
     jwt:
