--- a/monitor-client/pom.xml
+++ b/monitor-client/pom.xml
@@ -64,6 +64,14 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <plugin>
+                <!-- maven 打包时跳过测试 -->
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
