--- a/monitor-server/pom.xml
+++ b/monitor-server/pom.xml
@@ -93,6 +93,15 @@
             <artifactId>influxdb-client-java</artifactId>
             <version>6.6.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
     </dependencies>
 
     <build>
